UI: add historical page & bar chart

--- a/UI/index.html
+++ b/UI/index.html
@@ -24,10 +24,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Darshboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Historical Data</a>
+                            <a class="nav-link" href="./historical/historical.html">Historical Data</a>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +35,7 @@
         </nav>
 
         <!-- Alarm Text -->
-        <div class="alarm" id="alarm"></div>
+        <div class="alarm" id="alarm" style="display:none;"></div>
 
         <!--Darshboard-->
         <!-- Soil moisture -->
@@ -52,7 +52,7 @@
                             <span class="progress-bar"></span>
                         </span>
                         <div class="progress-value" >
-                            <span id="mois-value">30</span> <span>%</span>
+                            <span id="mois-value"></span><span>%</span>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                             <span class="progress-bar"></span>
                         </span>
                         <div class="progress-value">
-                            <sapn id="temp-value">15</sapn> <span>°C</span>
+                            <sapn id="temp-value"></sapn><span>°C</span>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                             <span class="progress-bar"></span>
                         </span>
                         <div class="progress-value">
-                            <sapn id="light-value">15</sapn> <span></span>
+                            <sapn id="light-value"></sapn><span></span>
                         </div>
                     </div>
                 </div>
