UI: improved the bar chart in data page & add the alert function for watering btn in home page

--- a/UI/index.html
+++ b/UI/index.html
@@ -36,7 +36,8 @@
 
         <!-- Alarm Text -->
         <div class="alarm" id="alarm" style="display:none;"></div>
-
+        <!-- Alert-->
+        <div id="wateringAlertPlaceholder"></div>
         <!--Darshboard-->
         <!-- Soil moisture -->
         <div class="container pt-5">
